# finsharee

./: .gitignore  .replit  README.md  backend-server.py  finshare-backend.py  migration_test_report.md  package-lock.json  package.json  pom.xml  pyproject.toml  replit.md  simple-backend.py  test-apis.sh  test_apis.sh
ai-service/: main.py
analytics-insights-service/: pom.xml
android-app/: README.md  TESTING_WITHOUT_ANDROID_STUDIO.md  build.gradle.kts  build_apk.sh  build_instructions.sh  web_testing_guide.md
attached_assets/: Pasted--FinShare-Application-Comprehensive-Backend-Design-Document-Section-1-FinShare-System-Architectu-1750603898879_1750603898880.txt  Pasted--Streamline-Your-Coding-with-Free-Gemini-Powered-IDE-Integration-For-developers-looking-to-lever-1750612529252_1750612529253.txt  Pasted--The-Front-Door-API-Gateway-Service-This-service-acts-as-the-single-unified-entry-point-for-all-r-1750593741504_1750593741505.txt  Pasted--The-Insight-Engine-Analytics-Insights-Service-This-service-is-responsible-for-processing-raw-fi-1750610452810_1750610452811.txt  Pasted--The-Messenger-Notification-Service-This-is-a-lightweight-asynchronous-service-whose-sole-purpose-1750611391212_1750611391214.txt  Pasted-Based-on-the-FinShare-Application-Comprehensive-Backend-Design-Document-here-are-the-testing-pla-1750612713392_1750612713393.txt  Pasted-FinShare-Application-Comprehensive-Backend-Design-Document-Section-1-FinShare-System-Architectur-1750613313489_1750613313490.txt  (+4 more)
balance-settlement-service/: pom.xml
docs/: README.md
expo-app/: App.js  README.md  app.json  (+3 more)
(+214 files in other folders)
