[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.13",
    "google-generativeai>=0.8.5",
    "httpx==0.28.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "scikit-learn>=1.7.0",
    "uvicorn==0.34.3",
]
