[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi==0.115.13",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "httpx==0.28.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.7",
    "python-jose>=3.5.0",
    "python-multipart==0.0.20",
    "scikit-learn>=1.7.0",
    "sift-stack-py>=0.6.2",
    "sqlalchemy>=2.0.41",
    "uvicorn==0.34.3",
]
